# SoftDeskSupport

./: .coveragerc  .gitignore  README.md  db.sqlite3  pyproject.toml
SoftDeskApp/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  views.py
SoftDeskApp/migrations/: 0001_initial.py
SoftDeskApp/templates/SoftDeskApp/: home.html
SoftDeskApp/tests/: test_utils.py  tests_permissions.py  tests_views.py
SoftDeskSupport/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
authentication/: forms.py  models.py  tests.py  views.py
authentication/migrations/: 0001_initial.py  0002_rename_can_be_sharde_user_can_be_shared.py  0003_alter_user_can_be_contacted_alter_user_can_be_shared.py  0004_remove_user_age_user_birth_date.py  0005_user_age.py  0006_alter_user_can_be_contacted.py  0007_alter_user_age.py  0008_rename_can_be_shared_user_can_data_be_shared.py
authentication/templates/authentication/: login.html
